work in progress filters

--- a/recruit-gui/src/index.html
+++ b/recruit-gui/src/index.html
@@ -5,6 +5,8 @@
   <title>RecruitUi</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="_csrf" content="${_csrf.token}"/>
+  <meta name="_csrf_header" content="${_csrf.headerName}"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
