duplicate info bug fix recruiter count and active recruiter

--- a/recruit-gui/src/index.html
+++ b/recruit-gui/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>RecruitUi</title>
+  <title>Arenella-ICT - IT Candidates for recruiters</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="_csrf" content="${_csrf.token}"/>
