--- a/recruit-gui/src/index.html
+++ b/recruit-gui/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="_csrf" content="${_csrf.token}"/>
   <meta name="_csrf_header" content="${_csrf.headerName}"/>
+  <meta name='description' content='IT recruitment website for European countries. IT recruiters can find available IT candidates in Europe , Benelux , Dach and UK regions. IT recruiters can search on IT candidate profiles and downlaod their CVs. Top countries are The Netherlands , Belgium , UK , Irealnd , Romania , Poland and Germany'>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
